k8s/kbk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kbk-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kbk
  template:
    metadata:
      labels:
        app: kbk
    spec:
      volumes:
        - name: kbk-persistent-storage
          persistentVolumeClaim:
            claimName: kbk-pvc
        - name: kbk-files
          hostPath: 
            # This
            path: /run/desktop/mnt/host/c/Users/bubth/Development/kbk/localxfer
            type: Directory
      containers:
        - name: kbk
          image: kbk:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: kbk-files
              mountPath: /kbk/localxfer

---
apiVersion: v1
kind: Service
metadata:
  name: kbk-service
spec:
  selector:
    app: kbk-service
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
